@@ -1,5 +1,6 @@
 iRedMail-0.9.0:
     * Improvement:
+        - Disable SSLv3 in Postfix, Dovecot, Apache, Nginx.
         - Use SSHA512 as default password hash for MySQL/MariaDB/PostgreSQL
           backends.
           Note: iRedAdmin supports SSHA512, but Roundcube/SOGo don't, so if
